[package]
name      = "filament-prover-guest-celestia"
version   = "0.3.0"
edition   = "2021"
resolver  = "2"

[workspace]

[dependencies]
filament-hub-config = { path = "../../../config" }
filament-hub-stf    = { path = "../../../stf" }

sov-celestia-adapter      = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "f4318b3" }
sov-kernels               = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "f4318b3" }
sov-mock-zkvm             = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "f4318b3" }
sov-modules-api           = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "f4318b3" }
sov-modules-stf-blueprint = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "f4318b3" }
sov-risc0-adapter         = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "f4318b3" }
sov-state                 = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "f4318b3" }

risc0-zkvm          = { version = "1.0.5", default-features = false, features = ["std"] }
risc0-zkvm-platform = { version = "1.0.5" }

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
# Corresponding release: <https://github.com/risc0/curve25519-dalek/releases/tag/curve25519-4.1.2-risczero.0>
ed25519-dalek = { git = "https://github.com/risc0/curve25519-dalek", rev = "3dccc5b71b806f500e73829e2a5cbfe288cce2a0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }


[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3

[features]
bench = ["sov-celestia-adapter/bench", "sov-risc0-adapter/bench"]
bincode = ["sov-risc0-adapter/bincode"]
