[workspace]

[package]
name      = "filament-prover-guest-celestia"
version   = "0.3.0"
edition   = "2021"
resolver  = "2"


[dependencies]
filament-hub-stf = { path = "../../../stf" }

sov-celestia-adapter      = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "bd3981a" }
sov-kernels               = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "bd3981a" }
sov-mock-zkvm             = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "bd3981a" }
sov-modules-api           = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "bd3981a" }
sov-modules-stf-blueprint = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "bd3981a" }
sov-risc0-adapter         = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "bd3981a" }
sov-rollup-interface      = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "bd3981a" }
sov-state                 = { git = "ssh://git@github.com/filament-zone/sovereign-sdk-wip.git", rev = "bd3981a" }

anyhow              = "1.0.86"
risc0-zkvm          = { version = "1.0.5", default-features = false, features = ["std"] }
risc0-zkvm-platform = "1.0.5"

[patch.crates-io]
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
# Corresponding release: <https://github.com/risc0/curve25519-dalek/releases/tag/curve25519-4.1.2-risczero.0>
ed25519-dalek = { git = "https://github.com/risc0/curve25519-dalek", rev = "3dccc5b71b806f500e73829e2a5cbfe288cce2a0" }
sha2          = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }

[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3

[features]
bench = ["sov-celestia-adapter/bench", "sov-risc0-adapter/bench"]
bincode = ["sov-risc0-adapter/bincode"]

[patch."ssh://git@github.com/Sovereign-Labs/sov-wallet-format.git"]
sov-wallet-format               = { git = "ssh://git@github.com/filament-zone/sov-wallet-format.git", rev = "44e23f9" }
sov-wallet-format-macro-helpers = { git = "ssh://git@github.com/filament-zone/sov-wallet-format.git", rev = "44e23f9" }
