[package]
name          = "fila-outposts"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
# rust-version  = { workspace = true }
publish       = { workspace = true }

[dependencies]
sov-modules-api = { workspace = true }
sov-state       = { workspace = true }

anyhow      = { workspace = true }
borsh       = { workspace = true, features = ["rc"] }
clap        = { workspace = true, optional = true }
serde       = { workspace = true }
schemars    = { workspace = true, optional = true }
serde_json  = { workspace = true, optional = true }
jsonrpsee   = { workspace = true, optional = true,  features = ["macros", "client-core", "server"] }

[dev-dependencies]
hub-core                    = { workspace = true }
fila-outposts               = { path = ".", version = "*", features = ["native"] }

sov-prover-storage-manager  = { workspace = true, features = ["test-utils"] }
sov-rollup-interface        = { workspace = true }
tempfile                    = { workspace = true }


[features]
default = []
native  = [
  "sov-modules-api/native",
  "sov-state/native",

  "clap",
  "jsonrpsee",
  "serde_json",
  "schemars",
]
serde   = []
test    = ["native"]
